# legendkit

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  colorart.ipynb  handles.ipynb  pyproject.toml  readthedocs.yaml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yaml
docs/: Makefile  requirements.txt
docs/source/: .gitignore  api.rst  conf.py  cover.py  index.rst  styles.mplstyle
docs/source/API/: legendkit.cat_legend.rst  legendkit.colorart.rst  legendkit.colorbar.rst  legendkit.handles.rst  legendkit.hstack.rst  legendkit.layout.rst  legendkit.legend.rst  legendkit.size_legend.rst  legendkit.vstack.rst
docs/source/_templates/autosummary/: class.rst
docs/source/examples/: README.rst  pacoty.mplstyle  plot_simple_tutorial.py
docs/source/gallery_examples/: index.rst  plot_simple_tutorial.ipynb  plot_simple_tutorial.py.md5  plot_simple_tutorial.rst  plot_simple_tutorial_codeobj.pickle  sg_execution_times.rst
docs/source/tutorial/: colorbar.rst  layout.rst  legend.rst  matplotlib_legend.rst  title&layout.rst
examples/: example1.py  example2.py  example3.py  full_examples.py
images/: illustration.excalidraw
imgs/: Presentation1.pptx
legendkit/: __init__.py  __init__.py.md  _colorart.py  _colorart.py.md  _colorbar.py  _colorbar.py.md  _handlers.py  _legend.py  _list_legend.py  _locs.py  _paired_size.py  _preset.py  _register.py  api.py  handles.py  layout.py
notebooks/: legend-pad.ipynb  legends.ipynb  tutorial.ipynb
tests/: test_colorart.py  test_colorbar.py  test_layout.py  test_legend.py
