[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "legendkit"
dynamic = ["version"]
description = "Legend creation and manipulation with ease for matplotlib"
requires-python = ">=3.8"
authors = [
      {name = "Mr-Milk", email = "yzheng@cemm.at"},
]
license = {file = "LICENSE"}
readme = "README.md"
repository = "https://github.com/Marsilea-viz/legendkit"
classifiers = [
      "License :: OSI Approved :: MIT License",
      "Programming Language :: Python :: 3",
      "Framework :: Matplotlib",
      "Intended Audience :: Science/Research",
      "Intended Audience :: Developers",
      "Topic :: Scientific/Engineering :: Visualization"
]
dependencies = [
    "matplotlib"
]

[dependency-groups]
dev = [
    "furo>=2024.8.6",
    "mpl-fontkit>=0.5.1",
    "numpydoc>=1.7.0",
    "pytest>=8.3.5",
    "sphinx>=7.1.2",
    "sphinx-gallery>=0.19.0",
    "taskipy>=1.14.1",
]

[tool.hatch.version]
path = "legendkit/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "README.md",
    "LICENSE",
    "pyproject.toml",
    "legendkit",
]

[tool.hatch.build.targets.wheel]
packages = ["legendkit", "README.md", "LICENSE", "pyproject.toml"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.taskipy.tasks]
test = "pytest tests"
