[metadata]
name = legendkit
version = 0.1.4
description = Legend creating and manipulation with ease for matplotlib
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mr-Milk/legendkit
author_email = yb97643@um.edu.mo
license = MIT
# license_file = LICENSE
classifiers =
      License :: OSI Approved :: MIT License
      Programming Language :: Python :: 3
      Framework :: Matplotlib
      Intended Audience :: Science/Research
      Intended Audience :: Developers
      Topic :: Scientific/Engineering :: Visualization

[options]
packages = find:
platforms = any
python_requires = >= 3.7
install_requires =
      matplotlib
